# lets_get_rusty

./: .gitignore
auth_service/: Cargo.toml
auth_service/src/: auth_utils.rs  database.rs  lib.rs  main.rs
bank/src/: lib.rs
bank/tests/: savings_account.rs
blog_workspace/: Cargo.toml
blog_workspace/blog_api/: Cargo.toml
blog_workspace/blog_api/src/: main.rs
blog_workspace/blog_shared/: Cargo.toml
blog_workspace/blog_shared/src/: lib.rs
blog_workspace/blog_web/: Cargo.toml
blog_workspace/blog_web/src/: main.rs
borrowing/src/: main.rs
box_smart_pointers/src/: main.rs
cargo_features/: Cargo.toml
cargo_features/src/: lib.rs
cargo_features_consumer/: Cargo.toml
cargo_features_consumer/src/: main.rs
comments/src/: main.rs
concrete_lifetimes/: Cargo.toml
concrete_lifetimes/src/: main.rs
constants_statics/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
deref_coercion/src/: main.rs
deriving_traits/src/: main.rs
enums/src/: main.rs
functions/src/: main.rs
generic_different_lifetimes/: Cargo.toml
generic_different_lifetimes/src/: main.rs
generic_lifetimes/src/: main.rs
generics/src/: main.rs
matching/src/: main.rs
modules/: notes
option/src/: main.rs
orphan_rule/src/: main.rs
ownership/src/: main.rs
ownership_continued/src/: main.rs
project_structure/src/: lib.rs
rc_smart_pointers/: Cargo.toml
rc_smart_pointers/src/: main.rs
ref_cell_smart_pointer/: Cargo.toml
ref_cell_smart_pointer/src/: main.rs
static_lifetimes/: Cargo.toml
structs_lifetimes_elision/: Cargo.toml
(+11 files in other folders)
